# anyway_projects

shomrei_haderech/: notebook.ipynb  pyproject.toml
