[tool.poetry]
name = "shomrei_haderech"
version = "0.1.0"
description = ""
authors = ["Carmel <16carmel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
httpx = "^0.23.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
